[FBSWN-2588]: moving from commons