@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>uk.gov.cabinetoffice.bpdg.stw.common</groupId>
+  <groupId>uk.gov.cabinetoffice.bpdg.stw</groupId>
   <artifactId>hmrc-trade-tariff-api-client</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
@@ -17,26 +17,49 @@
     <micrometer.version>1.7.1</micrometer.version>
   </properties>
 
+  <licenses>
+    <license>
+      <name>Apache License, Version 2.0</name>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+      <comments>A business-friendly OSS license</comments>
+    </license>
+  </licenses>
+
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub STW Apache Maven Packages</name>
+      <url>https://maven.pkg.github.com/futureborders/hmrc-trade-tariff-api-client</url>
+    </repository>
+  </distributionManagement>
+
   <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
+        <configuration>
+          <argLine>
+            @{argLine} --illegal-access=permit
+          </argLine>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>2.22.2</version>
+        <configuration>
+          <argLine>
+            @{argLine} --illegal-access=permit
+          </argLine>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
@@ -85,11 +108,11 @@
   </build>
 
   <dependencies>
-<!--    <dependency>-->
-<!--      <groupId>uk.gov.cabinetoffice.bpdg.stw.common</groupId>-->
-<!--      <artifactId>stw-prometheus-metrics</artifactId>-->
-<!--      <version>${project.version}</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>uk.gov.cabinetoffice.bpdg.stw</groupId>
+      <artifactId>stw-prometheus-metrics</artifactId>
+      <version>0.0.14</version>
+    </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
